# text-graphic-generator

./: .gitignore  Makefile  Pipfile  README.md  TODO.md  pyproject.toml  requirements.txt  supervisor.conf  uni.conf
public/: Exceptions.py  GraphicFunctions.py  LoggingFunctions.py  TextFunctions.py  app.py  variables.py  worker.py
public/static/css/: style.css
public/static/js/: eventHandler.js  formHandler.js  generate.js  request_error_handler.js
public/templates/: index.html
